--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>Screenshot by Lightshot</title>
-<meta property="og:title" content="Screenshot">
-<meta property="og:url" content="https://pnrtscr.com/gz5n0s">
-<meta property="og:site_name" content="Lightshot">
-<meta property="og:image" content="https://pnrtscr.com/lightshot.png">
-<meta property="og:description" content="Captured with Lightshot">
+<title>Fanta</title>
+<meta property="og:title" content="Fanta">
+<meta property="og:site_name" content="Fanta">
+<meta property="og:image" content="Fanta-logo.png">
+<meta property="og:description" content="Productos, novedades y promociones de Fanta que no puedes perderte! Pagina dirigida a distribuidoras">
 <meta property="og:type" content="website">
-<meta name="twitter:card" content="photo">
+<!-- <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Screenshot">
 <meta name="twitter:site" content="@light_shot">
 <meta name="twitter:description" content="Captured with Lightshot">
-<meta name="twitter:image:src" content="https://pnrtscr.com/lightshot.png">
+<meta name="twitter:image:src" content="https://pnrtscr.com/lightshot.png"> -->
 <link rel="preconnect" href="https://fonts.gstatic.com/">
 <link href="./Screenshot by Lightshot_files/css2" rel="stylesheet">
 <style type="text/css">
@@ -70,15 +69,15 @@
             }
 
             #accept-button {
-                background-color: rgb(132, 94, 194);
+                background-color: rgb(71, 71, 71);
 
                 color: white;
             }
 
             #decline-button {
-                color: rgb(132, 94, 194);
+                color: rgb(0, 0, 0);
 
-                border: 2px solid rgb(132, 94, 194);
+                border: 2px solid rgb(0, 0, 0);
             }
 
             p.overlay-description {
@@ -163,17 +162,13 @@
 <body>
 <div id="overlay" class="overlay">
 <div class="overlay-body">
-<p class="overlay-title">Cookies and user-generated content</p>
-<p class="overlay-description">This website uses cookies to offer you the most relevant information and
-better understand how you use this website. Please accept cookies for
-optimal performance.</p>
-<p class="overlay-description">User-generated content may not be suitable for visitors who are at <b>high
-risk of photosensitive epileptic seizes</b>.</p>
+<p class="overlay-title">Tienes mas de 13 años?</p>
+
 <div class="overlay-buttons-wrapper">
-<div id="accept-button" class="overlay-button">Accept</div>
-<div id="decline-button" class="overlay-button">Decline</div>
+<div id="accept-button" class="overlay-button">Si</div>
+<div id="decline-button" class="overlay-button">No</div>
 </div>
-<a href="https://app.prntscr.com/en/privacy.html" target="_blank" class="overlay-link">Privacy policy</a>
+
 </div>
 </div>
 <div class="scare">
@@ -181,7 +176,6 @@ risk of photosensitive epileptic seizes</b>.</p>
 </div>
 
 <script type="text/javascript">
-            const audio = document.getElementById("audio");
             const video = document.getElementById("video");
             const overlay = document.getElementById("overlay");
             const declineButton = document.getElementById("decline-button");
