--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:title" content="Lio Fanclub">
 <meta property="og:site_name" content="Fanta">
 <meta property="og:image" content="lio-icon.jpeg">
-<meta property="og:description" content="Fanclub de lio">
+<meta property="og:description" content="Fans de lio">
 <meta property="og:type" content="website">
 <!-- <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Screenshot">
