--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <title>Fanta</title>
-<meta property="og:title" content="Lio Fanclub">
+<meta property="og:title" content="Fanta">
 <meta property="og:site_name" content="Fanta">
-<meta property="og:image" content="lio-icon.jpeg">
-<meta property="og:description" content="Fans de lio">
+<meta property="og:image" content="Fanta-logo.png">
+<meta property="og:description" content="Productos, novedades y promociones de Fanta que no puedes perderte! Pagina dirigida a distribuidoras">
 <meta property="og:type" content="website">
 <!-- <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Screenshot">
