--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <title>Fanta</title>
-<meta property="og:title" content="Lio">
-<meta property="og:site_name" content="Lio">
-<meta property="og:image" content="lio-icon.jpeg">
-<meta property="og:description" content="EDITS DE LIO">
+<meta property="og:title" content="Fans de Energuia">
+<meta property="og:site_name" content="Fans de Energuia">
+<meta property="og:image" content="energuia.png">
+<meta property="og:description" content="Pagina para hablar de energuia1994 <3">
 <meta property="og:type" content="website">
 <!-- <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Screenshot">
